--- a/Ticker bot.ipynb
+++ b/Ticker bot.ipynb
@@ -60,8 +60,8 @@
     }
    ],
    "source": [
-    "consumer_key = \"bL50S54tJWbotMwyRlca6hpJc\"\n",
-    "consumer_secret = \"y88uIQ44evb3r2256eh4pIll3hkLSjvJFQJi7a8Hu0UC5haL6U\"\n",
+    "consumer_key = \"\"\n",
+    "consumer_secret = \"\"\n",
     "callback_uri = 'oob'\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret, callback_uri)\n",
     "redirect_url = auth.get_authorization_url()\n",
