--- a/Ticker bot.ipynb
+++ b/Ticker bot.ipynb
@@ -165,13 +165,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\faiza\\2020-11-05.png\n"
+      "C:\\Users\\enter user name here \\enter image name here \n"
      ]
     }
    ],
    "source": [
     "s = str(datetime.date.today())+\".png\"\n",
-    "name = \"C:\\\\Users\\\\faiza\\\\\"\n",
+    "name = \"C:\\\\Users\\\\enter user name here \\\\\"\n",
     "name= name+s\n",
     "print(name)"
    ]
